Make the Side Drawer scrollable to prevent content overlap

--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -18,6 +18,8 @@
       - Starts fast, slows towards end (ease-out)
   */
   transition: transform 0.3s ease-out;
+  display: flex;
+  flex-direction: column;
 }
 
 .side-drawer.open {
@@ -27,7 +29,7 @@
 
 .side-drawer ul {
   /* Consume entire height of side-drawer */
-  /* height: 100%; */
+  height: 100%;
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -37,6 +39,11 @@
   padding-top: 2rem;
   padding-left: 0;
   margin-top: 0;
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
 }
 
 .side-drawer li {
@@ -67,7 +74,6 @@
 .side-drawer__footer {
   /*min-height: 70%;*/
   /*background-color: #EFEFEF;*/
-  /* height: 100%; */
   text-align: center;
   font-size: x-small;
   color: grey;
@@ -75,7 +81,7 @@
 }
 
 .side-drawer__footer__content {
-  position: absolute;
+  /*position: absolute;*/
   bottom: 0;
   left: 0;
   right: 0;
